--- a/public/now.json
+++ b/public/now.json
@@ -1,6 +1,6 @@
 {
   "version": 1,
-  "name": "tech-log",
+  "alias": "tech-log",
   "routes": [
     { "handle": "filesystem" },
     { "src": "/.*", "dest": "/index.html" }
