Inital Landing Page CSS

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Tech-log",
-  "name": "Tech-log App",
+  "short_name": "Tag-A-log",
+  "name": "Tag-A-log App",
   "icons": [
     {
       "src": "favicon.ico",
